--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
                 <h1> LEARN ABOUT US
                 </h1>
                 <h2>
-                    ---We Are The Best Interior <br> Designing Firm In Your City
+                    We Are The Best Interior <br> Designing Firm In Your City
                 </h2>
 
                 <div class="icontainer">
@@ -81,7 +81,7 @@
         <h4 style="font-family: Arial, Helvetica, sans-serif; margin-left: 4cm;margin-top:5cm;font-size: 20px;color: #6a5bc0;">WHY CHOOSE US ?
         </h4>
         <h1 style="margin-left: 3cm; font-family: 'Times New Roman', Times, serif; font-size: 40px;">
-            ---25+ Years Experience In The <br> Interior Design Industry
+            25+ Years Experience In The <br> Interior Design Industry
         </h1>
         <p style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 20px; margin-left:3cm ;">HouseO'Soul is a redesign and renovation site that allows<br> users to connect with home rerofessionals. It allows users<br>to see room designs, products they can put in their home, <br>and professionals that can help them complete their projects.
         </p>
